2005-11-20  Quentin Mathe <qmathe@club-internet.fr>

    * Source/PKPreferencePane.m: Declared NSPreferencePane implementation, this
    hack allows NSPreferencePane reference in PreferencesKit based 
    applications.

2005-11-20  Quentin Mathe <qmathe@club-internet.fr>
    
    * PrebuiltTableView.nib: Added.
    * Headers/PKTableViewPreferencesController.h: Minor outlet tweak.
    * Source/PKTableViewPreferencesController.m (-loadUI): Extended with 
    missing code to set outlets value by loading PrebuiltTableView nib.
    
2005-11-20  Quentin Mathe <qmathe@club-internet.fr>
    
    Major refactoring.
    * Headers/CocoaCompatibility.h:
    * Headers/CocoaCompatibility.m:
    New files to put together various GNUstep extensions we depend on.
    * Headers/PreferencesKit.h: Updated.
    * Headers/PKPresentationBuilder.h:
    * Source/PKPresentationBuilder.m:
    Added.
    * Headers/PKPreferencesController.h:
    * Source/PKPreferencesController.m:
    Moved NSArray categories to CocoaCompatibility header and source files.
    Refactored by splitting preference panes handling logic in current class and 
    presentational logic in a separate class hierarchy based on new 
    PresentationBuilder abstract class. This new objects model closely relates
    to Builder pattern.  
    Added a new 'presentation' ivar to store the current presentation
    manager we have to interact with.
    (-initWithPresentationMode:): New method to obtain a controller inited with 
    a custom presentation (provided through presentation builder class cluster).
    (-initExtra): Inlined in previous method.
    (-preferencesListView:) Moved to PresentationBuilder under new name
    -presentationView.
    (-initUI): Moved to PresentationBuilder.
    (-selectPreferencePaneWithIdentifier:): Tailored with two delegate inspired
    messages sent to presentation side, allowing it to react to preference pane 
    changes; the two involved methods are -willSelectPreferencePaneWithIdentifier: 